[package]
name = "ndl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal TUI client for Threads"

[dependencies]
ratatui = { version = "0.30.0", features = ["serde"] }
ratatui-macros = "0.7.0"
crossterm = "0.29"

# OAuth / HTTPS
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Bluesky SDK
bsky-sdk = "0.1"
atrium-api = "0.25"

# Vendored OpenSSL for cross-compilation (required by bsky-sdk's transitive deps)
openssl = { version = "0.10", features = ["vendored"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
urlencoding = "2"
open = "5"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Shared library
ndl-core = { path = "../ndl-core", version = "0.2.14" }

[dev-dependencies]
chrono = "0.4"
